--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.16.0" }
+bevy = { version = "0.16.0", features = ["dynamic_linking"] }
+rand = "0.9.1"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
