--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
+
+# Release optimizations for maximum performance
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
