--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.17.0", features = ["dynamic_linking"] }
 rand = "0.9"
+indexmap = "2"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
