--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.17.0", features = ["dynamic_linking"] }
+nalgebra = { version = "0.33", features = ["libm"] }
 rand = "0.9"
 indexmap = "2"
 
